--- a/html/Editor.html
+++ b/html/Editor.html
@@ -56,10 +56,11 @@
                             <div class="input-field">
                                 <input name="Nom" type="text" placeholder="Nombre del Padecimiento" class="white grey-text autocomplete">
                             </div>
+                            <!--
                             <h5>Características</h5>
                             <div class="input-field">
                                 <input name="Char" type="text" placeholder="Palabras características del Padecimiento" class="white grey-text autocomplete">
-                            </div>
+                            </div>-->
                             <h5>Síntomas</h5>
                             <div class="input-field">
                                 <textarea name="CS" id="text_editor1" class="materialize-textarea white grey-text" placeholder="Ingrese los síntomas"></textarea>
@@ -67,10 +68,6 @@
                             <h5>Ejercicios</h5>
                             <div class="input-field">
                                 <textarea name="CE" id="text_editor2" class="materialize-textarea white grey-text" placeholder="Ingrese los ejercicios"></textarea>
-                            </div>
-                            <h5>Otros</h5>
-                            <div class="input-field">
-                                <textarea name="CO" id="text_editor3" class="materialize-textarea white grey-text" placeholder="Ingrese otros"></textarea>
                             </div>
                             <input type="Submit" value="Guardar" class="btn red lighten-3 black-text">
                         </form>
@@ -85,10 +82,10 @@
                             <div class="input-field">
                                 <input id="nomedit" type="text" placeholder="Nombre del Padecimiento" class="white grey-text autocomplete">
                             </div>
-                            <h5>Características</h5>
+                           <!-- <h5>Características</h5>
                             <div class="input-field">
                                 <input type="text" value="Palabras características del Padecimiento" class="white grey-text autocomplete">
-                            </div>
+                            </div>-->
                             <h5><a target="_blank" href="../html/ViewContent.html">Síntomas</a></h5>
                             <div class="input-field">
                                 <textarea id="SintTxt" class="materialize-textarea white grey-text" aria-valuetext="Ingrese los síntomas"></textarea>
@@ -96,10 +93,6 @@
                             <h5><a target="_blank" href="../html/ViewContent.html">Ejercicios</a></h5>
                             <div class="input-field">
                                 <textarea id="EjerTxt" class="materialize-textarea white grey-text" value="Ingrese los ejercicios"></textarea>
-                            </div>
-                            <h5><a target="_blank" href="../html/ViewContent.html">Otros</a></h5>
-                            <div class="input-field">
-                                <textarea id="OtroTxt" class="materialize-textarea white grey-text" value="Ingrese otros siubissiudvIuabsdVO UAWBDVO9U"></textarea>
                             </div>
                             <input type="Submit" value="Guardar" class="btn pink accent-2">
                         </form>
