--- a/html/Principal.html
+++ b/html/Principal.html
@@ -167,15 +167,15 @@
                 <h5>Escribe aquí lo que nos quieras decir:</h5>
                 <form action="../php/SubirComentario.php" method="POST">
                 <div class="input-field">
-                    <input name="NomCom" type="text" placeholder="Nombre" class="white autocomplete">
+                    <input id="n" name="nom" type="text" placeholder="Nombre" class="white autocomplete">
                 </div>
                 <div class="input-field">
-                    <input name="MailCom" type="text" placeholder="Email" class="white autocomplete">
+                    <input id="m" name="mail" type="text" placeholder="Email" class="white autocomplete">
                 </div>
                 <div class="input-field">
-                    <textarea name="ComCom" class="materialize-textarea white" placeholder="Enter Mesage"></textarea>
+                    <textarea id="c" name="com" class="materialize-textarea white" placeholder="Enter Mesage"></textarea>
                 </div>
-                <input name="submit_com" type="Submit" value="Enviar" class="btn red lighten-3 black-text">
+                <input id="E" name="submit_com" type="Submit" value="Enviar" class="btn red lighten-3 black-text">
                 </form>
             </div>
         </div>
