--- a/html/Principal.html
+++ b/html/Principal.html
@@ -43,6 +43,7 @@
                         <li><a href="#sobre">Sobre NOMBRE</a></li>
                         <li><a href="#recursos">Recursos</a></li>
                         <li><a href="#comentar">Comentar</a></li>
+                        <li><a href="../html/LogIn.html">Admin</a></li>
                     </ul>
                 </div>
             </div>
@@ -53,6 +54,7 @@
         <li><a href="#sobre">Sobre NOMBRE</a></li>
         <li><a href="#recursos">Recursos</a></li>
         <li><a href="#comentar">Comentar</a></li>
+        <li><a href="../html/LogIn.html">Admin</a></li>
     </ul>
     
 <!--Slider/Imágenes-->
@@ -184,17 +186,9 @@
 
 <!--Footer-->
 <footer class="section teal lighten-3 white-text">
-<div class="row">
-    <div class="col s8 l4">
+
         <h6>NOMBRE</h6>
-    </div>
-    <div class="col s4 right">
-    <p class="flow-text">NOMBRE $copy; 2018</p>
-<!--Flow text hace que el texto sea más responsive, se
-    agranda cuando la pantalla es más grande y achica un 
-    poco cuando la pantalla es más pequeña-->
-</div>
-</div>
+
 </footer>
             
     <!-- Compiled and minified JavaScript -->
