--- a/html/Editor.html
+++ b/html/Editor.html
@@ -25,7 +25,7 @@
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="../html/Instrucciones.html">Instrucciones</a></li>
-                        <li><a href="../html/Comentarios.html">Comentarios</a></li>
+                        <li><a href="../php/Comentarios.php">Comentarios</a></li>
                     </ul>
                 </div>
             </div>
@@ -33,7 +33,7 @@
     </div>
     <ul class="sidenav" id="mobile-nav">
         <li><a href="../html/Instrucciones.html">Instrucciones</a></li>
-        <li><a href="../html/Comentarios.html">Comentarios</a></li>
+        <li><a href="../php/Comentarios.php">Comentarios</a></li>
     </ul>
 
 <!--Editar/Crear-->
@@ -94,7 +94,7 @@
                             <div class="input-field">
                                 <textarea id="EjerTxt" class="materialize-textarea white grey-text" value="Ingrese los ejercicios"></textarea>
                             </div>
-                            <input type="Submit" value="Guardar" class="btn pink accent-2">
+                            <input type="Submit" value="Guardar" class="btn red lighten-3 black-text">
                         </form>
                     </div>
                 </div>
@@ -105,27 +105,15 @@
 
 <!--Footer-->
 <footer class="section teal lighten-3 white-text">
-<div class="row">
-    <div class="col s8 l4">
         <h6>NOMBRE</h6>
-    </div>
-    <div class="col s4 right">
-    <p class="flow-text">NOMBRE $copy; 2018</p>
-<!--Flow text hace que el texto sea más responsive, se
-    agranda cuando la pantalla es más grande y achica un 
-    poco cuando la pantalla es más pequeña-->
-</div>
-</div>
 </footer>
          
-<script src="ckeditor/ckeditor.js"></script>
+<script src="../ckeditor/ckeditor.js"></script>
 <script>
     CKEDITOR.replace('text_editor1');
     CKEDITOR.replace('text_editor2');
-    CKEDITOR.replace('text_editor3');
-    CKEDITOR.replace('text_editor4');
-    CKEDITOR.replace('text_editor5');
-    CKEDITOR.replace('text_editor6');
+    CKEDITOR.replace('SintTxt');
+    CKEDITOR.replace('EjerTxt');
 </script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
