--- a/html/Principal.html
+++ b/html/Principal.html
@@ -22,7 +22,10 @@
 
     <!-- Conexión al js -->
     <script src="../js/jquery-3.6.1.js"></script>
-    <script src="../js/BuscarPad.js"></script>
+    <!-- <script src="../js/BuscarPad.js"></script> -->
+    <script type="text/javascript" src="../js/jquery-ui.js"></script>
+    <link rel="stylesheet" href="../js/jquery-ui.css" />
+    <script type="text/javascript" src="../js/prueba.js"></script>
 </head>
 <!--
     TENGO QUE ARREGLAS LAS H1-6 PARA QUE TENGAN EL TAMAÑO CORRECTO, Y CAMBIARLES
@@ -90,11 +93,12 @@
         <div class="row">
             <div class="col s12">
                 <h3>Buscar Padecimientos</h3>
-                <form action="../php/BuscarPad.php" method="POST">
                 <div class="input-field center">
+                    <div class="ui-widget">
                     <input type="text" class="white" id="autocomplete-input" placeholder="Ansiedad, depreción, etc...">
+                    <button onClick="../js/prueba.php">enviar</button>
                 </div>
-            </form>
+                </div>
             </div>
         </div>
     </div>
