--- a/html/Principal.html
+++ b/html/Principal.html
@@ -96,7 +96,7 @@
                 <div class="input-field center">
                     <div class="ui-widget">
                     <input type="text" class="white" id="autocomplete-input" placeholder="Ansiedad, depreción, etc...">
-                    <button onClick="../js/prueba.php">enviar</button>
+                    <button onclick="">enviar</button>
                 </div>
                 </div>
             </div>
