--- a/html/Instrucciones.html
+++ b/html/Instrucciones.html
@@ -44,12 +44,16 @@
         <h3 class="text center">Instrucciones para el Administrador:</h3>
         <div class="rows">
             <div class="col s12">
-                <h5 class="text center">ESTE ES EL PROTOCOLO PARA SUBIR ARTÍCULOS DE LAS CATEGORÍAS “SÍNTOMAS”, “EJERCICIOS” Y “OTROS”.</h5>
+                <h5 class="text center">ESTE ES EL PROTOCOLO PARA SUBIR ARTÍCULOS DE LAS CATEGORÍAS “SÍNTOMAS”, “EJERCICIOS” Y “QUÉ ES”.</h5>
             <br>
-                <h5>El archivo debe ser guardado como .html. Por ejemplo: sintomas.html<br><br>
+                <h5>Utilizar lenguaje fácil, que sea lo menos complejo posible <br><br>
+                    El texto debe estar en el formato más simple posible<br><br>
                 La letra debe estar en tamaño ___.<br><br>
                 La letra debe ser de color negro (#0000).<br><br>
-                Se recomienda mantener una copia de la información de los padecimientos en un documento/carpeta en el ordenador como backup.</h5>
+                Se recomienda mantener una copia de la información de los padecimientos en un documento/carpeta en el ordenador como backup. <br><br>
+            Al editar, ingresar primero al botón VER para poder ver el contenido de cada categoría, copiarlo, pegarlo en su cuandro de texto correspondiente y editarlo. <br><br>
+                No importa que no vaya a editar un campo.
+        </h5>
             </div>
         </div>    
     </div>
