--- a/html/Editor.html
+++ b/html/Editor.html
@@ -74,20 +74,18 @@
                      </div>
                     <div id="Editar">
                         <h5>Buscar Padecimento</h5> 
+                        <form>
                         <div class="input-field">
                                 <input id="buscnom" type="text" placeholder="Nombre del Padecimiento" class="white grey-text autocomplete">
-                            <label type="hiden" name="pad" id="1"></label>
                             </div> 
-                        <from action="../php/editar.php" method="POST">
+                            <button><a target="_blank" href="../html/ViewContent.html"></a></button>
+                        </form>
+                        <from>
                             <h5>Nombre Padecimento</h5>
                             <div class="input-field">
                                 <input name="nom" id="EN" type="text" placeholder="Nombre del Padecimiento" class="white grey-text autocomplete">
                             </div>
-                           <!-- <h5>Características</h5>
-                            <div class="input-field">
-                                <input type="text" value="Palabras características del Padecimiento" class="white grey-text autocomplete">
-                            </div>-->
-                            <h5><a target="_blank" href="../html/ViewContent.html">Síntomas</a></h5>
+                            <h5>Síntomas</a></h5>
                             <div class="input-field">
                                 <textarea name="sint" id="ES" class="materialize-textarea white grey-text" aria-valuetext="Ingrese los síntomas"></textarea>
                             </div>
@@ -113,8 +111,10 @@
 <script>
     CKEDITOR.replace('text_editor1');
     CKEDITOR.replace('text_editor2');
+    CKEDITOR.replace('text_editor3');
     CKEDITOR.replace('SintTxt');
     CKEDITOR.replace('EjerTxt');
+    CKEDITOR.replace('QueTxt');
 </script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
