--- a/html/Editor.html
+++ b/html/Editor.html
@@ -11,7 +11,7 @@
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body id="inicio">
     <!--NavBar-->
@@ -19,7 +19,7 @@
         <nav class="teal lighten-3">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo">NOMBRE</a>
+                    <a href="" class="brand-logo"><img src="../Logo.png" height="60" class="vertical-align:middle"></a>
                     <a href="" data-target="mobile-nav" class="sidenav-trigger">
                         <i class="material-icons">menu</i>
                     </a>
@@ -103,8 +103,8 @@
 </section>
 
 <!--Footer-->
-<footer class="section teal lighten-3 white-text">
-        <h6>NOMBRE</h6>
+<footer class="section teal lighten-3 white-text center-align">
+    <a href="" class="brand-logo center"><img src="../Logo.png" height="100" class="center vertical-align:middle"></a>
 </footer>
          
 <script src="../ckeditor/ckeditor.js"></script>
