--- a/html/ImgTerap.html
+++ b/html/ImgTerap.html
@@ -11,7 +11,7 @@
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <!--
     TENGO QUE ARREGLAS LAS H1-6 PARA QUE TENGAN EL TAMAÑO CORRECTO, Y CAMBIARLES
@@ -23,7 +23,7 @@
         <nav class="teal lighten-3">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo">NOMBRE</a>
+                    <a href="" class="brand-logo"><img src="../Logo.png" height="60" class="vertical-align:middle"></a>
                     <a href="" data-target="mobile-nav" class="sidenav-trigger">
                         <i class="material-icons">menu</i>
                     </a>
@@ -62,18 +62,8 @@
 </section>
 
 <!--Footer-->
-<footer class="section teal darken-2 white-text">
-<div class="row">
-    <div class="col s8 l4">
-        <h6>NOMBRE</h6>
-    </div>
-    <div class="col s4 right">
-    <p class="flow-text">NOMBRE $copy; 2018</p>
-<!--Flow text hace que el texto sea más responsive, se
-    agranda cuando la pantalla es más grande y achica un 
-    poco cuando la pantalla es más pequeña-->
-</div>
-</div>
+<footer class="section teal lighten-3 white-text center-align">
+    <a href="" class="brand-logo center"><img src="../Logo.png" height="100" class="center vertical-align:middle"></a>
 </footer>
             
     <!-- Compiled and minified JavaScript -->
