--- a/html/LogIn.html
+++ b/html/LogIn.html
@@ -11,7 +11,7 @@
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!-- Conexión al js -->
     <script src="../js/jquery-3.6.1.js"></script>
@@ -23,7 +23,7 @@
         <nav class="teal lighten-3">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo">NOMBRE</a>
+                    <a href="" class="brand-logo"><img src="../Logo.png" height="60" class="vertical-align:middle"></a>
                     <a href="" data-target="mobile-nav" class="sidenav-trigger">
                         <i class="material-icons">menu</i>
                     </a>
@@ -69,20 +69,9 @@
 		<button id="E" class="boton">Enviar</button>
 -->
 <!--Footer-->
-<footer class="section teal lighten-3 white-text">
-<div class="row">
-    <div class="col s8 l4">
-        <h6>NOMBRE</h6>
-    </div>
-    <div class="col s4 right">
-    <p class="flow-text">NOMBRE $copy; 2018</p>
-<!--Flow text hace que el texto sea más responsive, se
-    agranda cuando la pantalla es más grande y achica un 
-    poco cuando la pantalla es más pequeña-->
-</div>
-</div>
-</footer>
-            
+<footer class="section teal lighten-3 white-text center-align">
+    <a href="" class="brand-logo center"><img src="../Logo.png" height="100" class="center vertical-align:middle"></a>
+</footer>            
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     
