--- a/Principal.html
+++ b/Principal.html
@@ -19,7 +19,10 @@
             return false;
         }
     </script> -->
-<script src="js/jquery-3.6.1.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+    crossorigin="anonymous"></script>
 
 </head>
 <!--
@@ -41,7 +44,7 @@
                         <li><a href="#sobre">Sobre NOMBRE</a></li>
                         <li><a href="#recursos">Recursos</a></li>
                         <li><a href="#comentar">Comentar</a></li>
-                        <li><a href="../html/LogIn.html">Admin</a></li>
+                        <li><a href="./html/LogIn.html">Admin</a></li>
                     </ul>
                 </div>
             </div>
@@ -52,7 +55,7 @@
         <li><a href="#sobre">Sobre NOMBRE</a></li>
         <li><a href="#recursos">Recursos</a></li>
         <li><a href="#comentar">Comentar</a></li>
-        <li><a href="../html/LogIn.html">Admin</a></li>
+        <li><a href="./html/LogIn.html">Admin</a></li>
     </ul>
     
 <!--Slider/Imágenes-->
@@ -61,7 +64,7 @@
       <li>
         <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
         <div class="caption center-align black-text">
-          <h2 class="flow-text">Información accesible y verificada</h2>
+          <h2>Información accesible y verificada</h2>
           </div>
       </li>
       <li>
@@ -104,12 +107,12 @@
 <section id="sobre" class="section section-nosotros scrollspy">
     <div class="container">
         <div class="row">
-            <h3 class="center">Sobre NOMBRE</h3>
+            <h3 class="center">Sobre MENTIA</h3>
             <div class="col s12">
                 <div class="card red lighten-3">
                     <div class="card-content">
-                        <h5>¿Qué es NOMBRE?</h5>
-                        <h6>NOMBRE es una página web destinada a brindar información respecto a los distintos padecimientos mentales que existen de forma que esta sea lo más accesible y fácil de comprender posible, incluyendo ejercicos y tips que pueden ayudar a superar y/o convivir con las barreras que presenta cada padecimiento. </h6>
+                        <h5>¿Qué es MENTIA?</h5>
+                        <h6>MENTIA es una página web destinada a brindar información respecto a los distintos padecimientos mentales que existen de forma que esta sea lo más accesible y fácil de comprender posible, incluyendo ejercicos y tips que pueden ayudar a superar y/o convivir con las barreras que presenta cada padecimiento. </h6>
                         <h5>¿Cómo surgio la página?</h5>
                         <h6>Esta página comenzo como el proyecto final de 4to año de secundario de dos Alumnas de la escuela Ort, sede Belgrano. Las alumnas se sumaron a la iniciativa “Empatizando”, impulsada por el colegio, queriendo abordar el tema de la falta de información y la desinformación sobre los distintos padecimientos mentales. </h6>
                     </div>
