--- a/html/LogIn.html
+++ b/html/LogIn.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <!-- Conexión al js -->
-    <script src="../js/jquery-3.6.1.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.6.1.min.js"
+  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+  crossorigin="anonymous"></script>
     <script src="../js/Admin.js"></script>
 </head>
 <body id="inicio">
