--- a/html/Editor.html
+++ b/html/Editor.html
@@ -84,7 +84,7 @@
                         <div class="input-field">
                                 <input id="buscnom" type="text" placeholder="Nombre del Padecimiento" class="white grey-text autocomplete">
                             </div> 
-                            <input class="btn red lighten-3 black-text" href="../html/ViewContent.html" value="Ver contenido actual"></input>
+                            <input class="btn red lighten-3 black-text" href="../php/ViewContent.php" value="Ver contenido actual"></input>
                         </form>
                         <form>
                             <h5>Nombre Padecimento</h5>
@@ -119,12 +119,12 @@
          
 <script src="../ckeditor/ckeditor.js"></script>
 <script>
-    CKEDITOR.replace('Cque');
-    CKEDITOR.replace('Csin');
-    CKEDITOR.replace('Ceje');
-    CKEDITOR.replace('quee');
-    CKEDITOR.replace('sint');
-    CKEDITOR.replace('ejer');
+    CKEDITOR.replace('CQ');
+    CKEDITOR.replace('CS');
+    CKEDITOR.replace('CE');
+    CKEDITOR.replace('EQ');
+    CKEDITOR.replace('ES');
+    CKEDITOR.replace('EJ');
 </script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
