--- a/html/LogIn.html
+++ b/html/LogIn.html
@@ -31,14 +31,14 @@
                         <i class="material-icons">menu</i>
                     </a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="../html/Principal.html">Volver al Inicio</a></li>
+                        <li><a href="../Principal.html">Volver al Inicio</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
     <ul class="sidenav" id="mobile-nav">
-        <li><a href="../html/Principal.html">Volver al Inicio</a></li>
+        <li><a href="../Principal.html">Volver al Inicio</a></li>
     </ul>
 
 <!--Log in Form-->
