--- a/Principal.html
+++ b/Principal.html
@@ -171,7 +171,7 @@
             </div>
             <div class="col s12 m6 right">
                 <h5>Escribe aquí lo que nos quieras decir:</h5>
-                <form >
+                <!--<form >-->
                 <div class="input-field">
                     <input id="n" name="nom" type="text" placeholder="Nombre" class="white autocomplete">
                 </div>
@@ -181,8 +181,8 @@
                 <div class="input-field">
                     <textarea id="c" name="com" class="materialize-textarea white" placeholder="Enter Mesage"></textarea>
                 </div>
-                <input id="E" name="submit_com" type="submit" value="Enviar" class="btn red lighten-3 black-text">
-            </form>
+                <input id="E" name="submit_com" type="button" value="Enviar" class="btn red lighten-3 black-text">
+            <!--</form>-->
             </div>
         </div>
     </div>
