--- a/html/Editor.html
+++ b/html/Editor.html
@@ -82,7 +82,7 @@
                         <h5>Buscar Padecimento</h5> 
                         <form>
                         <div class="input-field">
-                                <input id="buscnom" type="text" placeholder="Nombre del Padecimiento" class="white grey-text autocomplete">
+                                <input name="bnom" id="buscnom" type="text" placeholder="Nombre del Padecimiento" class="white grey-text autocomplete">
                             </div> 
                             <input class="btn red lighten-3 black-text" href="../php/ViewContent.php" value="Ver contenido actual"></input>
                         </form>
@@ -119,12 +119,12 @@
          
 <script src="../ckeditor/ckeditor.js"></script>
 <script>
-    CKEDITOR.replace('CQ');
+    /*CKEDITOR.replace('CQ');
     CKEDITOR.replace('CS');
     CKEDITOR.replace('CE');
     CKEDITOR.replace('EQ');
     CKEDITOR.replace('ES');
-    CKEDITOR.replace('EJ');
+    CKEDITOR.replace('EJ');*/
 </script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
