--- a/html/Editor.html
+++ b/html/Editor.html
@@ -152,11 +152,11 @@
                 "TDAH": null,
             }});
         //material boxed
-        const mb = document.querySelector('.materialboxed');
-        M.Materialboxed.init(mb, {});
+       /* const mb = document.querySelector('.materialboxed');
+        M.Materialboxed.init(mb, {});*/
         //scrollspy
-        const ss = document.querySelectorAll('.scrollspy');
-        M.Scrollspy.init(ss, {});
+        /*const ss = document.querySelectorAll('.scrollspy');
+        M.Scrollspy.init(ss, {});*/
     </script>
     
     <script>
